// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopupInfo > Emits close > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupInfo > Emits close > allCalls 1`] = `
[
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:app|version",
    },
  ],
]
`;

exports[`PopupInfo > Emits close > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupInfo > Emits close > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupInfo > Emits close > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupInfo > Emits close > openedPopup 1`] = `undefined`;

exports[`PopupInfo > Emits close > selectedTheme 1`] = `"System"`;

exports[`PopupInfo > Emits close > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupInfo > Emits close > storage.get('THEME') 1`] = `null`;

exports[`PopupInfo > Emits close > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupInfo > Emits close > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupInfo > Emits close > storage.get('USERNAME') 1`] = `null`;

exports[`PopupInfo > Emits close > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": false,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupInfo > Emits close > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupInfo > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`PopupInfo > Mounts > allCalls 1`] = `
[
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:app|version",
    },
  ],
]
`;

exports[`PopupInfo > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupInfo > Mounts > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupInfo > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupInfo > Mounts > openedPopup 1`] = `undefined`;

exports[`PopupInfo > Mounts > selectedTheme 1`] = `"System"`;

exports[`PopupInfo > Mounts > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupInfo > Mounts > storage.get('THEME') 1`] = `null`;

exports[`PopupInfo > Mounts > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupInfo > Mounts > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupInfo > Mounts > storage.get('USERNAME') 1`] = `null`;

exports[`PopupInfo > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": false,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "",
}
`;

exports[`PopupInfo > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`PopupInfo > Renders correct description list items > KeyStore.getKey() 1`] = `CryptoKey {}`;

exports[`PopupInfo > Renders correct description list items > allCalls 1`] = `
[
  [
    "tauriApi",
    {
      "calledWith": undefined,
      "name": "plugin:app|version",
    },
  ],
  [
    "request",
    {
      "name": "/login",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "id": "id",
          "timestamp": 0,
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "id": "id",
            "timestamp": 0,
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
]
`;

exports[`PopupInfo > Renders correct description list items > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`PopupInfo > Renders correct description list items > mockDb 1`] = `
{
  "encryptedNotes": 10,
  "users": {
    "d": "1",
  },
}
`;

exports[`PopupInfo > Renders correct description list items > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "id": "id",
      "timestamp": 0,
    },
  ],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "id": "id",
    "timestamp": 0,
  },
}
`;

exports[`PopupInfo > Renders correct description list items > openedPopup 1`] = `undefined`;

exports[`PopupInfo > Renders correct description list items > selectedTheme 1`] = `"System"`;

exports[`PopupInfo > Renders correct description list items > storage.get('MENU_WIDTH') 1`] = `null`;

exports[`PopupInfo > Renders correct description list items > storage.get('THEME') 1`] = `null`;

exports[`PopupInfo > Renders correct description list items > storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`PopupInfo > Renders correct description list items > storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`PopupInfo > Renders correct description list items > storage.get('USERNAME') 1`] = `"d"`;

exports[`PopupInfo > Renders correct description list items > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "isLoading": false,
  "isLoggedIn": true,
  "isLogin": true,
  "newPassword": "",
  "password": "",
  "unsyncedNoteIds": {
    "add": [Function],
    "clear": [Function],
    "deleted": Set {},
    "edited": Set {},
    "new": "",
    "size": 0,
  },
  "username": "d",
}
`;

exports[`PopupInfo > Renders correct description list items > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
